# teaching-aid

./: .gitignore  Makefile  README.md  latex_smoke.py  llm_dataflow.py  matmul_gpu_vs_systolic.py  pyproject.toml  sample_scene.py
_docs/: llm_dataflow_animation.md  manim_setup.md  matmul_animation.md
